# rates-api

./: .gitignore  LICENSE  README.md  docker-compose.yml
services/db/: Dockerfile
services/rates-api/: Dockerfile  pylintrc  pyproject.toml
services/rates-api/src/: db.py  main.py
services/rates-api/tests/: conftest.py  test_main.py
