[tool.poetry]
name = "rates-api"
version = "0.1.0"
description = "A REST API that provides average prices for each day between two geographical regions"
authors = ["saimoncse19 <saimoncse19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
databases = "^0.6.2"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
httpx = "^0.23.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
